expose branches scratchpad port directly